# cpp_practice

./: cowsbulls.cpp  fltk.sln
02/: fau.txt  least_squares.cpp  plot.py
03/: erastosthen.cpp
Application2/: Application2.cpp  Application2.sln  Application2.vcxproj
Application2/Application2/x64/Debug/: Application2.exe.recipe  Application2.ilk  vc143.idb
Application2/Application2/x64/Debug/Application2.tlog/: CL.command.1.tlog  (+8 more)
Application2/Application2/x64/Release/: Application2.exe.recipe  Application2.iobj  Application2.ipdb
chess/: CMakeLists.txt  backend (1).cpp  backend.h  bot (1).cpp  bot.h  chess.cpp  chess.sln  chess.vcxproj  frontend (1).cpp  frontend.h  main_chess (1).cpp  tester.cpp
chess/chess/x64/Debug/: chess.exe.recipe  chess.ilk  vc143.idb
chess/chess/x64/Debug/chess.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  chess.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
english_grammar.cpp/: english_grammar.cpp.sln
english_grammar.cpp/english_grammar.cpp/: english_grammar.cpp.vcxproj  english_grammar.cpp.vcxproj.filters
logic/: Header2.h  logic.cpp  logic.sln  logic.vcxproj  logic.vcxproj.filters
logic/logic/FileContentIndex/: 4960f873-8fe9-478d-96f8-7e438856368d.vsidx
logic/v17/: DocumentLayout.json  Solution.VC.db
name_age/: name_age.cpp  name_age.sln  name_age.vcxproj  name_age.vcxproj.filters
name_age/name_age/x64/Debug/: vc143.idb
vec/: Header1.h  vec.cpp  vec.sln  vec.vcxproj  vec.vcxproj.filters
vec/vec/: Header1.h
vec/vec/x64/Debug/: vc143.idb
(+11 files in other folders)
